language menu item on small screen issue

--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,6 @@ img {
   .navbar ul li:hover ul li {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    z-index: 1;
   }
 
   .about .content h1 {
